--- a/pages/aulas/aula-01.html
+++ b/pages/aulas/aula-01.html
@@ -32,7 +32,7 @@
       </nav>
    </header>
    <section class="row">
-       <nav class="col-sm-3 bg-purple">
+       <nav class="col-lg-3 bg-purple">
         <ul class="navbar-nav mt-3">
             <li class="nav-item">
                 <a href="aula-01.html">
@@ -64,7 +64,7 @@
             </li>
         </ul>
         </nav>
-        <article class="col-sm-9">
+        <article class="col-lg-9">
             <div class="card-m-3">
                 <div class="card-body"></div>
                 <h2 class="cinza-escuro text-white p-2 text-center m-3">HTML 5</h2>
