--- a/pages/aulas/aula-02.html
+++ b/pages/aulas/aula-02.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
     <section class="row">
-        <nav class="col-sm-3 bg-purple">
+        <nav class="col-lg-3 bg-purple">
             <ul class="navbar-nav mt-3">
                 <li class="nav-item">
                     <a href="aula-01.html">
@@ -64,7 +64,7 @@
                 </li>
             </ul>
         </nav>
-        <article class="col-sm-9">
+        <article class="col-lg-9">
             <h3 class="cinza-escuro text-white p-2 text-center m-3">
                 Seletores CSS 3
             </h3>
@@ -88,7 +88,7 @@
             </div>
             <h3 class="cinza-escuro text-white p-1 text-center m-3">Tipos de seletores CSS 3</h3>
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-lg-6">
                     <h4 class="cinza-claro p-1 text-center m-3">01 - Seletor de elemento CSS 3</h4>
                     <div class="card m-3">
                         <div class="card-body">
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-lg-6">
                     <h4 class="cinza-claro p-1 text-center m-3">02 - Seletor de Classes</h4>
                     <div class="card m-3">
                         <div class="card-body">
