--- a/pages/aulas/aula-03.html
+++ b/pages/aulas/aula-03.html
@@ -36,7 +36,7 @@
         </nav>
     </header>
     <section class="row">
-        <nav class="col-sm-3 bg-purple">
+        <nav class="col-lg-3 bg-purple">
             <ul class="navbar-nav mt-3">
                 <li class="nav-item">
                     <a href="aula-01.html">
@@ -68,7 +68,7 @@
                 </li>
             </ul>
         </nav>
-        <article class="col-sm-9">
+        <article class="col-lg-9">
             <h3 class="cinza-escuro text-white p-2 text-center m-3">
                 Exemplo de alteração em JavaScript
             </h3>
@@ -95,7 +95,7 @@
             </div>
             <h3 class="cinza-escuro text-center text-white p-2 m-3">Operadoes aritméticos</h3>
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-lg-6">
                     <div class="p-2 mt-3 bg-white m-3">
                         <h4 class="cinza-claro p-2 m-3">01 Adição com JavaScript</h4>
                         <div class="card m-3">
@@ -148,7 +148,7 @@
                         </div>
                        </div> 
                 </div>
-                <div class="col-sm-6">
+                <div class="col-lg-6">
                     <div class="p-2 mt-3 bg-white m-3">
                         <h3>05 Exponenciação com JavaScript</h3>
                         <div class="card">
