--- a/pages/aulas/aula-04.html
+++ b/pages/aulas/aula-04.html
@@ -36,7 +36,7 @@
         </nav>
     </header>
     <section class="row">
-        <nav class="col-sm-3 bg-purple">
+        <nav class="col-lg-3 bg-purple">
             <ul class="navbar-nav mt-3">
                 <li class="nav-item">
                     <a href="aula-01.html">
@@ -68,7 +68,7 @@
                 </li>
             </ul>
         </nav>
-        <article class="col-sm-9">
+        <article class="col-lg-9">
             <h3 class="cinza-escuro text-white p-2 text-center m-3">
                 Definição de BootStrap
             </h3>
@@ -86,7 +86,7 @@
             </h3>
             <div class="container mt-5">
                 <div class="row">
-                    <div class="col-sm-4">
+                    <div class="col-lg-4">
                         <h4 class="cinza-claro p-2 m-3">
                             <I class="fa fa-linux"></I>
                             BootStrap 3
@@ -111,7 +111,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-lg-4">
                         <h4 class="cinza-claro p-2 m-3">
                             <I class="fa fa-linux"></I>
                             BootStrap 4
@@ -136,7 +136,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-lg-4">
                         <h4 class="cinza-claro p-2 m-3">
                             <I class="fa fa-linux"></I>
                             BootStrap 5
